--- a/T365CalculatorScreens/Base.lproj/SellerNetSheet.storyboard
+++ b/T365CalculatorScreens/Base.lproj/SellerNetSheet.storyboard
@@ -3407,6 +3407,6 @@
         <image name="locationArrow" width="15" height="16"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="XQR-KG-gm1"/>
+        <segue reference="tCa-r2-b9Y"/>
     </inferredMetricsTieBreakers>
 </document>
