--- a/T365CalculatorScreens/Base.lproj/SellerBuyerOther.storyboard
+++ b/T365CalculatorScreens/Base.lproj/SellerBuyerOther.storyboard
@@ -70,13 +70,16 @@
                                 <rect key="frame" x="0.0" y="100" width="600" height="42"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Gu-AV-GsD">
-                                        <rect key="frame" x="551" y="14" width="37" height="14"/>
+                                        <rect key="frame" x="548" y="13" width="40" height="16.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="BN3-wD-la4"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="14"/>
                                         <color key="textColor" red="0.60392156860000001" green="0.64705882349999999" blue="0.72941176470000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Saved Estimates" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ueY-X7-eEh">
-                                        <rect key="frame" x="12" y="13" width="109" height="15"/>
+                                        <rect key="frame" x="12" y="12" width="112.5" height="17.5"/>
                                         <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="15"/>
                                         <color key="textColor" red="0.60392156862745094" green="0.6470588235294118" blue="0.72941176470588232" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -109,7 +112,7 @@
                                 <constraints>
                                     <constraint firstItem="ueY-X7-eEh" firstAttribute="leading" secondItem="BHe-Q6-RgJ" secondAttribute="leading" constant="12" id="5EI-dZ-9Ny"/>
                                     <constraint firstItem="ueY-X7-eEh" firstAttribute="centerY" secondItem="BHe-Q6-RgJ" secondAttribute="centerY" id="80r-BG-bgK"/>
-                                    <constraint firstAttribute="trailing" secondItem="our-OL-18D" secondAttribute="trailing" constant="55" id="9A7-78-TdZ"/>
+                                    <constraint firstItem="2Gu-AV-GsD" firstAttribute="leading" secondItem="our-OL-18D" secondAttribute="trailing" constant="3" id="Bed-6r-xtT"/>
                                     <constraint firstItem="2Gu-AV-GsD" firstAttribute="centerY" secondItem="BHe-Q6-RgJ" secondAttribute="centerY" id="P4b-a7-R7P"/>
                                     <constraint firstAttribute="height" constant="42" id="bHH-pP-lzY"/>
                                     <constraint firstItem="7Tz-be-dhF" firstAttribute="top" secondItem="BHe-Q6-RgJ" secondAttribute="top" constant="1" id="dyT-RA-oLu"/>
@@ -145,13 +148,13 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Net Sheet for James" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jlx-zc-kGK">
-                                                            <rect key="frame" x="55" y="17" width="144" height="16"/>
+                                                            <rect key="frame" x="55" y="15.5" width="146.5" height="19"/>
                                                             <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="16"/>
                                                             <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Saved on Feb 10, 2016" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AgM-Lo-EJA">
-                                                            <rect key="frame" x="55" y="38" width="128.5" height="13"/>
+                                                            <rect key="frame" x="55" y="37" width="135" height="15.5"/>
                                                             <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="13"/>
                                                             <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -236,7 +239,7 @@
                                         <rect key="frame" x="156" y="193" width="289" height="254"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E56-Ih-cjF">
-                                                <rect key="frame" x="5" y="154" width="284" height="49"/>
+                                                <rect key="frame" x="5" y="157.5" width="284" height="49"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="49" id="ho6-xK-Ycl"/>
                                                 </constraints>
@@ -254,13 +257,13 @@ a buyer’s cash to close and more…</string>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Estimates" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EDu-db-pCX">
-                                                <rect key="frame" x="84" y="118" width="121" height="21"/>
+                                                <rect key="frame" x="82" y="118" width="125.5" height="24.5"/>
                                                 <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="21"/>
                                                 <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap the + button to create one." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hIF-fb-83U">
-                                                <rect key="frame" x="47" y="213" width="201.5" height="15"/>
+                                                <rect key="frame" x="43.5" y="216.5" width="207" height="17.5"/>
                                                 <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="15"/>
                                                 <color key="textColor" red="0.2627450980392157" green="0.52156862745098043" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
