--- a/T365CalculatorScreens/Base.lproj/SellerNetSheet.storyboard
+++ b/T365CalculatorScreens/Base.lproj/SellerNetSheet.storyboard
@@ -289,7 +289,7 @@
         <!--Payoffs Controller-->
         <scene sceneID="kRn-lI-juf">
             <objects>
-                <viewController id="IcD-ta-iOP" customClass="PayoffsController" customModule="T365CalculatorScreens" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PayoffsController" id="IcD-ta-iOP" customClass="PayoffsController" customModule="T365CalculatorScreens" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="GTx-DQ-mFx"/>
                         <viewControllerLayoutGuide type="bottom" id="aof-ga-DBQ"/>
@@ -327,12 +327,17 @@
                     </view>
                     <navigationItem key="navigationItem" id="5fU-xd-DUS">
                         <barButtonItem key="backBarButtonItem" title=" " id="rWh-c3-Dv0"/>
+                        <barButtonItem key="rightBarButtonItem" title="+" id="Ezz-dE-uje">
+                            <connections>
+                                <action selector="addFormRow:" destination="IcD-ta-iOP" id="TQZ-64-XKK"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4jX-CJ-p2R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3031" y="979"/>
+            <point key="canvasLocation" x="2912" y="947"/>
         </scene>
         <!--Closing Costs Controller-->
         <scene sceneID="iWM-fn-u96">
@@ -746,6 +751,9 @@
                                             <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="17"/>
                                             <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="next"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="n8m-cb-6Ad" id="zlu-Yh-gvp"/>
+                                            </connections>
                                         </textField>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Payoff 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccS-oc-1MO">
                                             <rect key="frame" x="15" y="20" width="51.5" height="16.5"/>
@@ -3423,6 +3431,6 @@
         <image name="locationArrow" width="15" height="16"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="3Pi-el-KRG"/>
+        <segue reference="Pfb-Zg-Pbb"/>
     </inferredMetricsTieBreakers>
 </document>
