--- a/T365CalculatorScreens/Base.lproj/SellerNetSheet.storyboard
+++ b/T365CalculatorScreens/Base.lproj/SellerNetSheet.storyboard
@@ -1536,7 +1536,7 @@
         <!--Property Tax Rate Controller-->
         <scene sceneID="wfp-yv-R6L">
             <objects>
-                <viewController id="QSn-OO-mAe" customClass="PropertyTaxRateController" customModule="T365CalculatorScreens" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PropertyTaxRateController" id="QSn-OO-mAe" customClass="PropertyTaxRateController" customModule="T365CalculatorScreens" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="VqQ-Ly-hMx"/>
                         <viewControllerLayoutGuide type="bottom" id="v0G-c6-em7"/>
@@ -1554,7 +1554,7 @@
                                     <segue destination="FHh-u3-K0e" kind="embed" identifier="EmbedHeader" id="XQR-KG-gm1"/>
                                 </connections>
                             </containerView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="55" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EOR-wH-E54">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="55" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EOR-wH-E54">
                                 <rect key="frame" x="0.0" y="227.5" width="600" height="120.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -1582,11 +1582,14 @@
                                                     <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1.17901" placeholder="0.00" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k3w-MB-uUF">
+                                                <textField opaque="NO" clipsSubviews="YES" tag="502" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0.00" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="k3w-MB-uUF">
                                                     <rect key="frame" x="469" y="17.5" width="66" height="20"/>
                                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="QSn-OO-mAe" id="8KW-tS-3vd"/>
+                                                    </connections>
                                                 </textField>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="THG-Ms-opf" userLabel="NameUnderline">
                                                     <rect key="frame" x="15" y="40" width="412" height="1"/>
@@ -1595,11 +1598,14 @@
                                                         <constraint firstAttribute="height" constant="1" id="MaL-rG-jgU"/>
                                                     </constraints>
                                                 </view>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="San Diego, CA" placeholder="Enter Country Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XiY-NT-Ybg">
+                                                <textField opaque="NO" clipsSubviews="YES" tag="501" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="San Diego, CA" placeholder="Name of Tax Rate" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="XiY-NT-Ybg">
                                                     <rect key="frame" x="15" y="17.5" width="412" height="20"/>
                                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="QSn-OO-mAe" id="33W-5k-bP1"/>
+                                                    </connections>
                                                 </textField>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a8L-Pk-erG">
                                                     <rect key="frame" x="555" y="15" width="25" height="25"/>
@@ -1633,9 +1639,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="cityStateName" destination="XiY-NT-Ybg" id="pAe-n6-rLW"/>
                                             <outlet property="propertyRateSelection" destination="a8L-Pk-erG" id="csq-Fg-QX8"/>
                                             <outlet property="taxRate" destination="k3w-MB-uUF" id="Vha-FI-KC2"/>
+                                            <outlet property="taxRateName" destination="XiY-NT-Ybg" id="pAe-n6-rLW"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -1677,12 +1683,20 @@
                     </view>
                     <navigationItem key="navigationItem" id="wq5-LD-IcM">
                         <barButtonItem key="backBarButtonItem" title=" " id="OaT-Sw-ihJ"/>
+                        <barButtonItem key="rightBarButtonItem" title="+" id="Vec-Ew-Do7">
+                            <connections>
+                                <action selector="addFormRow:" destination="QSn-OO-mAe" id="LRX-ZV-jUp"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="propertyTaxRatesTable" destination="EOR-wH-E54" id="vvS-p9-h88"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6j3-Tw-DSW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2221" y="1491"/>
+            <point key="canvasLocation" x="1973" y="1413"/>
         </scene>
         <!--Taxes Form-->
         <scene sceneID="eF3-iN-M9Q">
@@ -3239,7 +3253,7 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="VA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a44-27-jXf">
-                                                    <rect key="frame" x="15" y="18.5" width="19.5" height="19"/>
+                                                    <rect key="frame" x="15" y="18.5" width="23.5" height="19"/>
                                                     <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="16"/>
                                                     <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -3431,6 +3445,6 @@
         <image name="locationArrow" width="15" height="16"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Pfb-Zg-Pbb"/>
+        <segue reference="XQR-KG-gm1"/>
     </inferredMetricsTieBreakers>
 </document>
